force-app/main/default/objects/IoT_Reading__e/IoT_Reading__e.object-meta.xml
<CustomObject>
    <description>T5-A 가상 IoT 데모 입력. 실제 센서 연동 아님 — Trend 계산·Alert 로직 검증용(DEC-T5-17).</description>
    <label>IoT Reading</label>
</CustomObject>