force-app/main/default/objects/IoT_Reading__e/fields/Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Id__c</fullName>
    <label>Asset Id</label>
    <type>Text</type>
    <length>18</length>
    <description>이 측정값이 속한 Asset의 레코드 Id(18자리)</description>
</CustomField>