force-app/main/default/objects/IoT_Reading__e/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <label>측정 시각</label>
    <type>DateTime</type>
</CustomField>