force-app/main/default/objects/IoT_Reading__e/fields/Measurement_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Item_Code__c</fullName>
    <description>T3·T4 Work Type 템플릿이 쓰는 6종 코드와 동일한 값을 문자열로 전달(유량·온도·차압·전류·누기·체결토크)</description>
    <label>측정 항목 코드</label>
    <length>100</length>
    <type>Text</type>
</CustomField>